<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBarTimeTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.tabs.TabLayout android:layout_width="match_parent"
                                                    android:id="@+id/tabsTimeTable"
                                                    android:layout_height="wrap_content"
                                                    app:tabMode="scrollable"
                                                    app:tabGravity="fill"
                                                    app:tabIndicatorColor="@color/colorAccent"
                                                    app:tabSelectedTextColor="@color/colorAccent">
            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_1"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_2"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_3"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_4"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_5"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_6"/>

            <com.google.android.material.tabs.TabItem
                    android:id="@+id/weekItem7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_of_week_7"/>
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/containerTimeTable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarTimeTable" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>